<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.unibo.cupidnodelogging.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="90"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
        <item
        android:id="@+id/action_connect"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/insecure_connect"/>
     <item
        android:id="@+id/action_save_devices"
        android:orderInCategory="110"
        android:showAsAction="never"
        android:title="@string/SaveDevices"/>
     <item android:id="@+id/action_send_server" android:orderInCategory="120" android:title="@string/chooseServer" android:showAsAction="never"></item>

</menu>
