<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/scrollView1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" 
      android:background="@drawable/main_header_selector">
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" >

	
	    <TextView
	        android:id="@+id/textNodes"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ConnNodes" />
	
	    <Spinner
	        android:id="@+id/spinnerNodeType"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	
	   <TableLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	         android:id="@+id/layoutCupidNode">
	
	        <TableRow
	            android:id="@+id/tableRowSR"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" 
	            android:gravity="center_vertical">
	
	            <TextView
	                android:id="@+id/textSampleRate"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/SampleRate"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
	
			    <Spinner
			        android:id="@+id/spinnerSampleRate"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content" />
	            
	        </TableRow>
	
	        <TableRow
	            android:id="@+id/tableRowGFS"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" 
	            android:gravity="center_vertical">
			    <TextView
	                android:id="@+id/textGyrFullScale"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/GyrFullScale"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
	
			    <Spinner
			        android:id="@+id/spinnerGyrFullScale"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content" />
	
	        </TableRow>
	        
	        <TableRow
	            android:id="@+id/tableRowAFS"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" 
	            android:gravity="center_vertical">
			    <TextView
	                android:id="@+id/textAccFullScale"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/AccFullScale"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
	
			    <Spinner
			        android:id="@+id/spinnerAccFullScale"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content" />
	
	        </TableRow>
	
	        <TableRow
	            android:id="@+id/tableRowDT"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="center_vertical" >
	            <TextView
	                android:id="@+id/textDataType"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="Packet Type"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
	
			    <Spinner
			        android:id="@+id/spinnerDataType"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content" />
	        </TableRow>
	
	
	    </TableLayout>
	

		
		<TableLayout
		   android:layout_width="match_parent"
		   android:layout_height="wrap_content"
		   android:id="@+id/layoutGenericNode">	  
		         
		   <TableRow
	            android:id="@+id/tableRow1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="center_vertical" >
	            <TextView
	                android:id="@+id/textCostomString"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="Send custom String"/>

	            <EditText
	                android:id="@+id/editTextCustomStr"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:ems="10" >
	                <requestFocus />
	            </EditText>
	        </TableRow>
	        
		  <TableRow
		    android:id="@+id/tableRow2"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" >
		
		<TextView
		    android:id="@+id/textViewSartCmd"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="Start Command" />		        
		
		<EditText
		    android:id="@+id/editTextSartCmd"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:ems="10" />
		</TableRow>      
		
		<TableRow
		    android:id="@+id/tableRow3"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" >
		   
		<TextView
		    android:id="@+id/textViewStopCmd"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="Stop command" />
		<EditText
		    android:id="@+id/editTextStopCmd"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:ems="10" />
		</TableRow>     
		        
	    </TableLayout>

		


	    
		<Button
	       android:id="@+id/buttonSubmit"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="Submit" />
		
		
	</LinearLayout>

</ScrollView>